tg_parser/tests/invalid/invalid2_missing_arrow.tg
circuit BadCircuit(in a, b; out y) {
    wire w1;
    NAND2 g1(a, b) w1;
}
